# iitiiri

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  Readme.md  book.toml  tarpaulin.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: draft-paper.yaml  lints.yaml  msrv.yaml  release-plz.yaml  tests.yaml  website.yaml
benches/: iit_vs_iitii.rs  sort.rs  tree_utils.rs  tree_vs_interpolate_tree.rs
examples/: clairiere_annotate.rs  clairiere_build.rs  clairiere_interpolate_annotate.rs  clairiere_interpolate_build.rs  clairiere_interpolate_query.rs  clairiere_query.rs  coitrees_annotate.rs  coitrees_build.rs  coitrees_query.rs  iitiiri_annotate.rs  iitiiri_annotation_variant.rs  iitiiri_build.rs  iitiiri_query.rs  iitri_annotate.rs  iitri_build.rs  iitri_query.rs  rust_bio_annotate.rs  rust_bio_build.rs  rust_bio_query.rs
paper/: .gitignore  Readme.md  experiment.ipynb  paper.bib  paper.md
paper/experiment/: Readme.md  Snakefile  cgranges_annotation_variant.c  cgranges_build.c  cgranges_query.c  figure.ipynb  iitii_annotation_variant.cpp  iitii_build.cpp  iitii_query.cpp  makefile
paper/experiment/etcs/: config.yml
paper/experiment/rules/: affine_effect.smk  build.smk  data.smk  memory.smk  thread.smk  time.smk
paper/experiment/src/: cgranges_annotate.c  cgranges_build.c  cgranges_query.c  iitii_annotate.cpp  iitii_build.cpp  iitii_query.cpp
src/: error.rs  estimator.rs  intervals.rs  lib.rs  node.rs  tree_utils.rs
src/estimator/: affine.rs  lazy.rs
website/: SUMMARY.md  example.md  install.md  usage.md
