[package]
name    = "clairiere"
version = "0.1.0"
authors = [
	"Pierre Marijon <pierre.marijon-ext@aphp.fr>"
]

description  = "A rust implementation of implicit interval tree with interpolation index."
edition      = "2021"
rust-version = "1.67"

homepage      = "https://natir.github.io/clairiere"
repository    = "https://github.com/natir/clairiere"
documentation = "https://natir.github.io/clairiere"

readme       = "Readme.md"
license-file = "LICENSE"


[lib]
name = "clairiere"
path = "src/lib.rs"


[dependencies]
## Specific management
num-traits    = { version = "0.2" }
linreg        = { version = "0.2" }

## Parallel management
rayon         = { version = "1", optional = true }

## Error management
thiserror     = { version = "2" }

## Logging management
log           = { version = "0.4" }


[dev-dependencies]
## Benchmark management
criterion     = { version = "0.5" }
seq-macro     = { version = "0.3" }
atoi          = { version = "2" }
bio           = { version = "2" }
coitrees      = { version = "0.4" }

## Generate value for test
rand          = { version = "0.8", features = ["small_rng"] }


[features]
default = []
parallel = ["dep:rayon"]
bench = []
eval_guess = []


[[bench]]
name              = "tree_vs_interpolate_tree"
required-features = ["bench"]
harness           = false


[[bench]]
name              = "tree_utils"
required-features = ["bench"]
harness           = false

[[bench]]
name              = "sort"
required-features = ["bench"]
harness           = false


[profile.release]
lto             = 'thin'
opt-level       = 3
overflow-checks = false
panic           = 'abort'
incremental     = false


[profile.profiling]
inherits = "release"
debug    = true
